fix a IE bug whick would break the div container, the left and right borders turn out to be blank near the bottom,  just simply add "height:100%" to the container attributions.

--- a/hello/weather/static/weather/main.css
+++ b/hello/weather/static/weather/main.css
@@ -46,6 +46,7 @@ body{background: url("bg.png") repeat-x scroll 0 0 #E5ECF4;     font-family: Ver
     margin: 0;
     padding: 4px 10px;
     border-bottom:none;
+    height:100%;
 }
 
 #footer{
